Making some minor style fixes #53 #52 #51 #47
There were some design issues to be fixed
Fixed landing page navbar to top, even when scrolling down
Homepage footer was overlapping the item's list (added margin)
Homepage sidebar was too large, decreased width
Decreased operations list left-padding

--- a/app/styles/card.scss
+++ b/app/styles/card.scss
@@ -1,7 +1,7 @@
 .card {
   background-color: #fff;
   box-shadow: 1px 1px 5px rgba(126, 142, 159, 0.1);
-  margin-bottom: 10px;
+  margin-bottom: 85px;
   border-radius: 0;
   border: none;
 
