--- a/app/styles/item.scss
+++ b/app/styles/item.scss
@@ -481,6 +481,8 @@
 .items-list-page {
   .title-search-block {
     position: relative;
+    margin-top: 25px;
+
   }
 
   .title-block .action {
